Terminada la cabecera + el formulario + los enlaces + la localizacion

--- a/index.html
+++ b/index.html
@@ -21,17 +21,18 @@
         <div style="background-color:grey; width: 1350px; height: 180px" >
             <img src="Recursos/banner1.png" alt="banner1" width="1350px" height="180px" > 
         </div>
-    </header>   
-
-    <div >
+    </header>  
+    <div>
         <nav> 
             <br>
-            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="inicio.html" class=""> Inicio </a> 
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="index.html" class=""> Inicio </a> 
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="sobrenosotros.html" class=""> Sobre nosotros </a> 
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="visitar.html" class=""> Cosas para visitar </a> 
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="reservas.html" class=""> Reservas </a>
         </nav>
-    </div>
+    </div> 
+
+    
     
     <div>
         <H1>
