--- a/inicio.html
+++ b/inicio.html
@@ -7,9 +7,18 @@
     <title>Inicio</title>
 </head>
 <body>
-    <h1> 
-        ESTE ES EL Inicio
-    </h1>
+    <header class="cabecera">
+        <div style="background-color:grey; width: 1350px; height: 180px" >
+            <img src="Recursos/banner1.png" alt="banner1" width="1350px" height="180px" > 
+            <nav> 
+                <br>
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="inicio.html" class=""> Inicio </a> 
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="sobrenosotros.html" class=""> Sobre nosotros </a> 
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="visitar.html" class=""> Cosas para visitar </a> 
+                &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="reservas.html" class=""> Reservas </a>
+            </nav>
+        </div>
+    </header> 
     
 </body>
 </html>
