--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -7,9 +7,20 @@
     <title> Los Dolmenes </title>
 </head>
 <body>
-    <h1>
-        esto va sobre los Dolmenes
-    </h1>
+    <header class="cabecera">
+        <div style="background-color:grey; width: 1350px; height: 180px" >
+            <img src="Recursos/banner1.png" alt="banner1" width="1350px" height="180px" > 
+        </div>
+    </header>  
+    <div>
+        <nav> 
+            <br>
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="index.html" class=""> Inicio </a> 
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="sobrenosotros.html" class=""> Sobre nosotros </a> 
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="visitar.html" class=""> Cosas para visitar </a> 
+            &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="reservas.html" class=""> Reservas </a>
+        </nav>
+    </div> 
     
 </body>
 </html>
