--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
     </div>   
     <footer id="main-footer">
         <p>
-            @Instagram
-            <a href="https://www.instagram.com/"> Pie de pagina </a>
+            <img src="Recursos/logo1.png" alt="logoInsta" width="30px" height="30px">
+            <a href="https://www.instagram.com/"> Instagram </a>
+            <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
+            <a href="https://www.facebook.com/hotelantequera"> Facebook </a>
         </p>
     </footer>
       
