--- a/inicioNOUSAR.html
+++ b/inicioNOUSAR.html
@@ -19,6 +19,14 @@
             </nav>
         </div>
     </header> 
+    <footer id="main-footer">
+        <p>
+            <img src="Recursos/logo1.png" alt="logoInsta" width="30px" height="30px">
+            <a href="https://www.instagram.com/"> Instagram </a>
+            <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
+            <a href="https://www.facebook.com/hotelantequera"> facebook </a>
+        </p>
+    </footer>
     
 </body>
 </html>
