--- a/reservas.html
+++ b/reservas.html
@@ -79,6 +79,14 @@
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3185.5621842666355!2d-4.576580684703889!3d37.02023987990379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72901762c2fd2f%3A0x311f0b31cf8ce6d3!2sHotel%20Antequera%20Hills!5e0!3m2!1ses!2ses!4v1668682694998!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
         </iframe>
     </fieldset>
+    <footer id="main-footer">
+        <p>
+            <img src="Recursos/logo1.png" alt="logoInsta" width="30px" height="30px">
+            <a href="https://www.instagram.com/"> Instagram </a>
+            <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
+            <a href="https://www.facebook.com/hotelantequera"> Facebook </a>
+        </p>
+    </footer>
     
 </body>
 </html>
