--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -21,6 +21,14 @@
             &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; <a href="reservas.html" class=""> Reservas </a>
         </nav>
     </div> 
+    <footer id="main-footer">
+        <p>
+            <img src="Recursos/logo1.png" alt="logoInsta" width="30px" height="30px">
+            <a href="https://www.instagram.com/"> Instagram </a>
+            <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
+            <a href="https://www.facebook.com/hotelantequera"> Facebook </a>
+        </p>
+    </footer>
     
 </body>
 </html>
