Footer terminado + comiezo de sobre nosotros

--- a/reservas.html
+++ b/reservas.html
@@ -74,6 +74,10 @@
         <br>
              <textarea id="msg" name="user_message"></textarea>
         <br>
+        <br>
+        
+
+        La ubicación de nuestro hotel es:
   
         <br>
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3185.5621842666355!2d-4.576580684703889!3d37.02023987990379!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xd72901762c2fd2f%3A0x311f0b31cf8ce6d3!2sHotel%20Antequera%20Hills!5e0!3m2!1ses!2ses!4v1668682694998!5m2!1ses!2ses" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
@@ -85,7 +89,15 @@
             <a href="https://www.instagram.com/"> Instagram </a>
             <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
             <a href="https://www.facebook.com/hotelantequera"> Facebook </a>
-        </p>
+            <img src="Recursos/logo3.png" alt="twitter" width="30px" height="30px">
+            <a href="https://twitter.com/?lang=es"> Twitter </a> &nbsp; &nbsp; &nbsp; &nbsp; 
+
+
+            <A>
+                Puedes encontrarnos en: 
+                <a href="https://www.google.com/maps?hl=es&q=hotel+antequera+hills+direcci%C3%B3n&biw=1366&bih=606&dpr=1&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiRwdzQrMH7AhVWiFwKHZ6jDxwQ_AUoAXoECAIQAw"> Av. Alcalde José María González, 29200 Antequera, Málaga</a> &nbsp; &nbsp; Contacto : 952 00 73 06 //  <a href="https://mail.google.com/mail">antequeragolf@gmail.com</a> 
+            </A>
+  
     </footer>
     
 </body>
