--- a/visitar.html
+++ b/visitar.html
@@ -27,7 +27,15 @@
             <a href="https://www.instagram.com/"> Instagram </a>
             <img src="Recursos/logo2.png" alt="logoFacebook" width="30px" height="30px">
             <a href="https://www.facebook.com/hotelantequera"> Facebook </a>
-        </p>
+            <img src="Recursos/logo3.png" alt="twitter" width="30px" height="30px">
+            <a href="https://twitter.com/?lang=es"> Twitter </a> &nbsp; &nbsp; &nbsp; &nbsp; 
+
+
+            <A>
+                Puedes encontrarnos en: 
+                <a href="https://www.google.com/maps?hl=es&q=hotel+antequera+hills+direcci%C3%B3n&biw=1366&bih=606&dpr=1&um=1&ie=UTF-8&sa=X&ved=2ahUKEwiRwdzQrMH7AhVWiFwKHZ6jDxwQ_AUoAXoECAIQAw"> Av. Alcalde José María González, 29200 Antequera, Málaga</a> &nbsp; &nbsp; Contacto : 952 00 73 06 //  <a href="https://mail.google.com/mail">antequeragolf@gmail.com</a> 
+            </A>
+  
     </footer>
 </body>
 </html>
