--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
     <title> Pagina de Luis </title>
 
-    <!--<script type="text/javascript">
+    <script type="text/javascript">
         alert("!!!!!! VAS A FLIPAR CON el hotel Golf !!!!!!") 
-    </script> -->
+    </script> 
 
 
 </head>
@@ -38,9 +38,7 @@
         <H1>
             Hotel Golf Antequera
         </H1>
-        <h2>
-            IMAGENES DEL HOTEL
-        </h2>
+        
         <img src="Recursos/foto1.png" alt="foto1" width="912" height="623" > 
         <img src="Recursos/foto2.png" alt="foto2" width="635" height="434">
         <img src="Recursos/foto3.png" alt="foto3" width="635" height="434">
