Logos + comienzo planteamiento página

--- a/index.html
+++ b/index.html
@@ -28,12 +28,43 @@
             <li><a href="Locales.html"> Locales </a></li>
 
         </ul>
-        
+
     </header>
+
+
 
     <footer>
 
-        
+        <footer>
+            <div id="pie_izquierdo">
+                <h2>
+                    Sobre nosotros</h2>
+                <div class="barra-divisoria-footer"></div>
+                <p>
+                    <span> SANO </span> será la primera cadena en España de centros
+                    de entrenamiento personal, con un sistema que integra dieta, nutrición, descanso y entrenamiento.
+                    <span> Expertos </span> en el sector. La cadena, en régimen de franquicia, va dirigida a titulados
+                    en Ciencias del Deporte y a expertos en entrenamiento personal.
+                </p>
+            </div>
+
+            <div id="pie_medio">
+
+                <div>
+                    <a href="https://www.facebook.com/people/Sano-Antequera/100071468435585/"> <img
+                            src="Recursos/logo facebook.png" alt="facebook" width="30px" height="30px"> </a>
+                    <a href="https://www.instagram.com/sano_antequera/?hl=es"> <img src="Recursos/logo instagram.png"
+                            alt="instagram" width="30px" height="30px"> </a>
+                    <a href="https://twitter.com/TorcalBalonmano"> <img src="Recursos/logo twiter.png" alt="twitter"
+                            width="30px" height="30px">
+                    </a>
+                </div>
+            </div>
+
+            <div id="pie_derecho">
+
+            </div>
+        </footer>
 
     </footer>
 
