Planteamiento mas aprender como subir una página a internet fuera com las herramientas de amazon services

--- a/index.html
+++ b/index.html
@@ -8,26 +8,34 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Luis García Díaz">
     <meta name="description" content="Proyecto CSS">
-    <link href="Recursos-" rel="stylesheet">
+    <link href="Recursos-css/Recursos.css" rel="stylesheet">
     <link rel="icon" href="Recursos/logo arriba.png">
 
 </head>
 
 <body>
 
-    <header>
+    <div id="todo">
 
-        <img src="Recursos/logo cabecera.png" alt="logo" width="175px" height="75px">
+        
+        <header>
 
-        <ul>
-            <li><a href="index.html"> Inicio </a></li>
-            <li><a href="Historia.html"> Historia </a></li>
-            <li><a href="Fotografias.html"> Fotografías </a></li>
-            <li><a href="Suscripción.html"> Susbcripción </a></li>
-            <li><a href="Locales.html"> Locales </a></li>
-        </ul>
+            <img src="Recursos/logo cabecera.png" alt="logo" width="175px" height="75px">
 
-    </header>
+            <ul>
+                <li><a href="index.html"> Inicio </a></li>
+                <li><a href="Historia.html"> Historia </a></li>
+                <li><a href="Fotografias.html"> Fotografías </a></li>
+                <li><a href="Suscripción.html"> Susbcripción </a></li>
+                <li><a href="Locales.html"> Locales </a></li>
+            </ul>
+
+        </header>
+
+
+    </div>
+
+
 
     <footer>
         <div id="pie_izquierdo">
