Página web terminada

--- a/Historia.html
+++ b/Historia.html
@@ -1,69 +1,155 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title> Historia </title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Luis García Díaz">
-    <meta name="description" content ="Proyecto CSS">
+    <meta name="description" content="Proyecto CSS">
     <link href="Recursos-css/Recursos.css" rel="stylesheet">
     <link rel="icon" href="Recursos/logo arriba.png">
+
+
 </head>
+
 <body>
-    
-    <header>
 
-        <img src="Recursos/logo cabecera.png" alt="logo" width="175px" height="75px">
+    <div id="todo">
+        <header id="mover">
+            <nav>
+                <div id="logo">
+                    <a href="#"><img src="Recursos/logo cabecera.png" alt=" fotoLogo" width="175px" height="75px"> </a>
+                </div>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html"> Inicio </a></li>
+                        <li><a href="Historia.html"> Historia </a></li>
+                        <li><a href="Fotografias.html"> Fotografías </a></li>
+                        <li><a href="Suscripción.html"> Susbcripción </a></li>
+                        <li><a href="Locales.html"> Locales </a></li>
+                    </ul>
+                </div>
+            </nav>
 
-        <ul>
-            <li><a href="index.html"> Inicio </a></li>
-            <li><a href="Historia.html"> Historia </a></li>
-            <li><a href="Fotografias.html"> Fotografías </a></li>
-            <li><a href="Suscripción.html"> Susbcripción </a></li>
-            <li><a href="Locales.html"> Locales </a></li>
-        </ul>
+        </header>
 
-    </header>
-
-    <footer>
-        <div id="pie_izquierdo">
-            <h2>
-                Sobre nosotros</h2>
-            <div class="barra-divisoria-footer"></div>
-            <p>
-                <span> SANO </span> será la primera cadena en España de centros
-                de entrenamiento personal, con un sistema que integra dieta, nutrición, descanso y entrenamiento.
-                <span> Expertos </span> en el sector. La cadena, en régimen de franquicia, va dirigida a titulados
-                en Ciencias del Deporte y a expertos en entrenamiento personal.
-            </p>
-        </div>
-
-        <div id="pie_medio">
-
-            <div>
-                <a href="https://www.facebook.com/people/Sano-Antequera/100071468435585/"> <img
-                        src="Recursos/logo facebook.png" alt="facebook" width="30px" height="30px"> </a>
-                <a href="https://www.instagram.com/sano_antequera/?hl=es"> <img src="Recursos/logo instagram.png"
-                        alt="instagram" width="30px" height="30px"> </a>
-                <a href="https://twitter.com/TorcalBalonmano"> <img src="Recursos/logo twiter.png" alt="twitter"
-                        width="30px" height="30px">
-                </a>
+        <div id="historia">
+            <div id="imagen-historia">
+                <img src="Recursos/foto 2.png" alt="foto2">
             </div>
+            <div id="texto-historia">
+                <h2> Historia </h2>
+                <p>
+                    NUESTRA FILOSOFÍA SE BASA
+                    SANO EN UN CONCEPTO DE SALUD HOLÍSTICA.
+                    Por eso, trabajamos de forma integral todas las parcelas de tu bienestar.
+                    Combinamos una novedosa metodología de entrenamiento con el acompañamiento nutricional y de coaching
+                    motivacional que necesitas.
+                    El poder de sumarle vida a tus años está en tus manos.
+                    MENOS SEDENTARISMO, MÁS SANO.
+                </p>
+                <p>
+                    PERSONAL & DUO TRAINING
+                    Entrenamiento individual o en pareja altamente eficiente y personalizado. Recomendado para personas
+                    con lesiones/patologías o usuarios que quieran iniciarse en la actividad física.
+                    EFICIENCIA, SEGURIDAD E INDIVIDUALIZACIÓ
+                </p>
+
+            </div>
+
+
+            <div id="imagen-historia2">
+                <img src="Recursos/foto 3.png" alt="foto3">
+
+            </div>
+
+            <div id="texto-historia2">
+                <p>
+                    GROUP TRAINING
+                    Entrena en grupos reducidos con sesiones 100% personalizadas. Sesiones con metodología
+                    fusión-funcional training con desarrollo de factores de fuerza y cardiovasculares. Comparte
+                    entrenamiento con personas con tus mismos objetivos con las que compartirás resultados y
+                    diversión.
+
+                    PLANIFICACIÓN, SEGUIMIENTO Y RESULTADOS.
+                </p>
+                <p>
+                    ROUND TRAINING
+                    Entrenamiento de alta intensidad en grupos reducidos. Sesiones de carga global que incrementarán tu
+                    metabolismo y tu capacidad de esfuerzo. Será el momento más intenso de la semana. ¡La quema de
+                    calorías estará garantizada!
+
+                    DIVERSIÓN, SUPERACIÓN Y MOTIVACIÓN.
+                </p>
+
+                <p>
+                    Nos mueve la pasión por una vida saludable. Somos abanderados de la vida activa, clave para alcanzar
+                    el estado recomendable de salud.
+
+                    Nuestra principal motivación es mejorar la salud de las personas, a través de entrenamiento físico
+                    personalizado, hábitos nutricionales saludables y un descanso óptimo.
+
+                    Entrena con personas igual que tú, con tus mismas motivaciones y objetivos. En Sano dejas fuera el
+                    estrés y la tensión para lograr un completo estado de evasión y diversión.
+                </p>
+            </div>
+
         </div>
 
-        <div id="pie_derecho">
-            <p>
-                Nuestro Horario:
-                Lunes 8:00–14:00, 16:00–22:00
-                Martes 8:00–22:00
-                Miércoles 8:00–14:00, 16:00–22:00
-                Jueves 8:00–22:00
-                Viernes 8:00–14:00, 17:00–21:00
-                Sábado Cerrado
-                Domingo Cerrado
-            </p>
-        </div>
-    </footer>
+
+
+
+        <footer>
+            <div id="pie_izquierdo">
+                <h2>
+                    Sobre nosotros</h2>
+                <br>
+                <br>
+                <p>
+                    <span> SANO </span> será la primera cadena en España de centros
+                    de entrenamiento personal, con un sistema que integra dieta, nutrición, descanso y entrenamiento.
+                    <span> Expertos </span> en el sector. La cadena, en régimen de franquicia, va dirigida a titulados
+                    en Ciencias del Deporte y a expertos en entrenamiento personal.
+                </p>
+            </div>
+
+            <div id="pie_medio">
+                <h2>Redes sociales</h2>
+                <br>
+                <br>
+                <div>
+                    <a href="https://www.facebook.com/people/Sano-Antequera/100071468435585/"> <img
+                            src="Recursos/logo facebook.png" alt="facebook" width="75px" height="75px"> </a>
+                    <a href="https://www.instagram.com/sano_antequera/?hl=es"> <img src="Recursos/logo instagram.png"
+                            alt="instagram" width="75px" height="75px"> </a>
+                    <a href="https://twitter.com/TorcalBalonmano"> <img src="Recursos/logo twiter.png" alt="twitter"
+                            width="75px" height="75px">
+                    </a>
+                </div>
+            </div>
+
+            <div id="pie_derecho">
+                <h2> Horario</h2>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        <p> Lunes, Miércoles y Viernes (8:00–14:00 // 16:00–22:00)</p>
+                    </li>
+                    <li>
+                        <p>Martes y Jueves (8:00-22:00)</p>
+                    </li>
+                    <li>
+                        <p> Findes (<span>CERRADO</span>)</p>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+
+    </div>
+
 </body>
+
 </html>
