--- a/Suscripción.html
+++ b/Suscripción.html
@@ -1,70 +1,127 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <title> Susbcripción </title>
 
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="author" content="Luis García Díaz">
-    <meta name="description" content ="Proyecto CSS">
+    <meta name="description" content="Proyecto CSS">
     <link href="Recursos-css/Recursos.css" rel="stylesheet">
     <link rel="icon" href="Recursos/logo arriba.png">
+
+
 </head>
+
 <body>
-    
-    <header>
 
-        <img src="Recursos/logo cabecera.png" alt="logo" width="175px" height="75px">
+    <div id="todo">
 
-        <ul>
-            <li><a href="index.html"> Inicio </a></li>
-            <li><a href="Historia.html"> Historia </a></li>
-            <li><a href="Fotografias.html"> Fotografías </a></li>
-            <li><a href="Suscripción.html"> Susbcripción </a></li>
-            <li><a href="Locales.html"> Locales </a></li>
-        </ul>
+        <header id="mover">
+            <nav>
+                <div id="logo">
+                    <a href="#"><img src="Recursos/logo cabecera.png" alt=" fotoLogo" width="175px" height="75px"> </a>
+                </div>
+                <div id="menu">
+                    <ul>
+                        <li><a href="index.html"> Inicio </a></li>
+                        <li><a href="Historia.html"> Historia </a></li>
+                        <li><a href="Fotografias.html"> Fotografías </a></li>
+                        <li><a href="Suscripción.html"> Susbcripción </a></li>
+                        <li><a href="Locales.html"> Locales </a></li>
+                    </ul>
+                </div>
+            </nav>
 
-    </header>
+        </header>
 
-    <footer>
-        <div id="pie_izquierdo">
-            <h2>
-                Sobre nosotros</h2>
-            <div class="barra-divisoria-footer"></div>
-            <p>
-                <span> SANO </span> será la primera cadena en España de centros
-                de entrenamiento personal, con un sistema que integra dieta, nutrición, descanso y entrenamiento.
-                <span> Expertos </span> en el sector. La cadena, en régimen de franquicia, va dirigida a titulados
-                en Ciencias del Deporte y a expertos en entrenamiento personal.
-            </p>
-        </div>
+        <div class="contain">
+            <header>
+                <div class="logo-text">
+                    <img src="Recursos/logo cabecera.png" alt="Logo">
+                </div>
+            </header>
 
-        <div id="pie_medio">
+            <div class="content">
+                <h1>
+                    Formulario
+                </h1>
+                <p>
+                    ¿Quieres inscribirte y formar parte de nuestra familia?
+                    !!!! REGRISTRATE !!!!
+                </p>
 
-            <div>
-                <a href="https://www.facebook.com/people/Sano-Antequera/100071468435585/"> <img
-                        src="Recursos/logo facebook.png" alt="facebook" width="30px" height="30px"> </a>
-                <a href="https://www.instagram.com/sano_antequera/?hl=es"> <img src="Recursos/logo instagram.png"
-                        alt="instagram" width="30px" height="30px"> </a>
-                <a href="https://twitter.com/TorcalBalonmano"> <img src="Recursos/logo twiter.png" alt="twitter"
-                        width="30px" height="30px">
-                </a>
+                <form class="form-contact" class="" action="#" method="post">
+                    <label for="">Nombres</label>
+                    <input class="controls" type="text" name="" id="">
+
+                    <label for="">Apellidos</label>
+                    <input class="controls" type="text" name="" id="">
+
+                    <label for="">Correo</label>
+                    <input class="controls" type="email" name="" id="">
+
+                    <label for="">C.V.</label>
+                    <input class="files" type="file" name="" id=""> <br>
+
+                    <input type="checkbox" name="" id=""><span>Estoy de Acuerdo con los Términos y Condiciones</span>
+                    <br>
+
+                    <input class="buttons" type="button" value="Enviar">
+                </form>
             </div>
-        </div>
 
-        <div id="pie_derecho">
-            <p>
-                Nuestro Horario:
-                Lunes 8:00–14:00, 16:00–22:00
-                Martes 8:00–22:00
-                Miércoles 8:00–14:00, 16:00–22:00
-                Jueves 8:00–22:00
-                Viernes 8:00–14:00, 17:00–21:00
-                Sábado Cerrado
-                Domingo Cerrado
-            </p>
         </div>
-    </footer>
-    
+        <footer>
+            <div id="pie_izquierdo">
+                <h2>
+                    Sobre nosotros</h2>
+                <br>
+                <br>
+                <p>
+                    <span> SANO </span> será la primera cadena en España de centros
+                    de entrenamiento personal, con un sistema que integra dieta, nutrición, descanso y entrenamiento.
+                    <span> Expertos </span> en el sector. La cadena, en régimen de franquicia, va dirigida a titulados
+                    en Ciencias del Deporte y a expertos en entrenamiento personal.
+                </p>
+            </div>
+
+            <div id="pie_medio">
+                <h2>Redes sociales</h2>
+                <br>
+                <br>
+                <div>
+                    <a href="https://www.facebook.com/people/Sano-Antequera/100071468435585/"> <img
+                            src="Recursos/logo facebook.png" alt="facebook" width="75px" height="75px"> </a>
+                    <a href="https://www.instagram.com/sano_antequera/?hl=es"> <img src="Recursos/logo instagram.png"
+                            alt="instagram" width="75px" height="75px"> </a>
+                    <a href="https://twitter.com/TorcalBalonmano"> <img src="Recursos/logo twiter.png" alt="twitter"
+                            width="75px" height="75px">
+                    </a>
+                </div>
+            </div>
+
+            <div id="pie_derecho">
+                <h2> Horario</h2>
+                <br>
+                <br>
+                <ul>
+                    <li>
+                        <p> Lunes, Miércoles y Viernes (8:00–14:00 // 16:00–22:00)</p>
+                    </li>
+                    <li>
+                        <p>Martes y Jueves (8:00-22:00)</p>
+                    </li>
+                    <li>
+                        <p> Findes (<span>CERRADO</span>)</p>
+                    </li>
+                </ul>
+            </div>
+        </footer>
+
+    </div>
+
 </body>
+
 </html>
